feat: Añadir sección de contacto en index.html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Primer Proyecto Web</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>¡Hola desde mi proyecto!</h1>
+
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Puedes contactarnos en info@ejemplo.com</p>
+    </section>
+
     <script src="main.js"></script>
 </body>
 </html>
